hphp/test/slow/inout/msrv-error.php.expectf

Fatal error: In/out function called dynamically without inout annotations in %s/msrv-error.php on line 4
